--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,13 @@
   "cSpell.words": [
     "mirf",
     "println"
-  ]
+  ],
+  "files.associations": {
+    "array": "cpp",
+    "deque": "cpp",
+    "unordered_map": "cpp",
+    "vector": "cpp",
+    "initializer_list": "cpp",
+    "*.tcc": "cpp"
+  }
 }
